--- a/contact-page-master/styles.css
+++ b/contact-page-master/styles.css
@@ -29,11 +29,51 @@ body {
 .wrapper {
   background-color: aliceblue;
   max-width: 810px;
+  max-height: 100%;
   margin: auto;
+  padding: 100px;
 }
 
 
 
+.name-info {
+  border: solid 2px blue;
+  margin-top: 32px;
+  margin-bottom: 24px;
+}
+
+.email-info {
+  border: solid 2px orange;
+  margin-top: 32px;
+  margin-bottom: 24px;
+ 
+}
+
+.size-info {
+  border: solid 2px green;
+  margin-top: 24px;
+  margin-bottom: 24px;
+ 
+}
+
+.subject-info {
+  border: solid 2px purple;
+  margin-top: 24px;
+  margin-bottom: 24px;
+ 
+}
+
+.message-info {
+  border: solid 2px coral;
+  margin-top: 24px;
+  margin-bottom: 32px;
+}
+
+button {
+  border: solid 2px indigo;
+  width: 100%;
+  margin-bottom: 32px;
+}
 
 
 
