--- a/contact-page-master/styles.css
+++ b/contact-page-master/styles.css
@@ -28,12 +28,30 @@ body {
 
 .wrapper {
   background-color: aliceblue;
-  max-width: 810px;
+  max-width: 800px;
   max-height: 100%;
   margin: auto;
   padding: 10px;
+  border-radius: 10px;
+}
+.wrapper input, 
+.wrapper select {
+  width: 300px;
+  height: 50px;
+  border-radius: 10px;
 }
 
+.wrapper textarea {
+  height: 200px;
+  width: 100%;
+  border-radius: 10px;
+  resize: none;
+}
+
+.wrapper label {
+  display: block;
+  font-size: bold;
+}
 .wrapper div {
   display: inline-block;
   padding: 10px;
@@ -57,8 +75,6 @@ body {
   border: solid 2px green;
   margin-top: 24px;
   margin-bottom: 24px;
- 
- 
 }
 
 .subject-info {
@@ -72,14 +88,16 @@ body {
 .wrapper .message-info {
   border: solid 2px coral;
   margin-top: 24px;
-  margin-bottom: 32px;
   display: block;
 }
 
 button {
   border: solid 2px indigo;
-  width: 100%;
-  margin-bottom: 32px;
+  width: 90%;
+  height: 50px;
+  margin-left: 32px;
+  margin-left: 32px;
+  border-radius: 10px;
 }
 
 
