--- a/contact-page-master/styles.css
+++ b/contact-page-master/styles.css
@@ -37,8 +37,8 @@ body {
 
 .wrapper {
   background-color: aliceblue;
-  max-width: 800px;
-  max-height: 100%;
+  max-width: 60%;
+  max-height: 200%;
   margin: auto;
   padding: 10px;
   border-radius: 10px;
@@ -46,14 +46,14 @@ body {
 
 .wrapper input, 
 .wrapper select {
-  width: 300px;
+  width: 100%;
   height: 50px;
   border-radius: 10px;
 }
 
 .wrapper textarea {
   height: 200px;
-  width: 100%;
+  width: 95%;
   border-radius: 10px;
   resize: none;
 }
@@ -80,48 +80,46 @@ textarea::placeholder {
 .wrapper div {
   display: inline-block;
   padding: 10px;
+  width: 45%;
   margin-left: 24px;
-  margin-right: 32px;
+  margin-top: 24px;
+  
 }
 
 .name-info {
   border: solid 2px blue;
-  margin-top: 32px;
-  margin-bottom: 24px;
+ 
 }
 
 .email-info {
   border: solid 2px orange;
-  margin-top: 32px;
-  margin-bottom: 24px;
+  
 }
 
 .size-info {
   border: solid 2px green;
-  margin-top: 24px;
-  margin-bottom: 24px;
+ 
 }
 
 .subject-info {
   border: solid 2px purple;
-  margin-top: 24px;
-  margin-bottom: 24px;
-  
+ 
  
 }
 
 .wrapper .message-info {
   border: solid 2px coral;
-  margin-top: 24px;
   display: block;
+  width: 100%;
+  margin-bottom: 24px;
 }
 
 button {
   border: solid 2px indigo;
-  width: 90%;
+  width: 95%;
   height: 50px;
-  margin-left: 32px;
-  margin-left: 32px;
+  margin-left: 24px;
+  margin-left: 24px;
   border-radius: 10px;
   font-weight: bold;
   font-size: 20px;
