--- a/contact-page-master/styles.css
+++ b/contact-page-master/styles.css
@@ -35,7 +35,7 @@ body {
 }
 
 .wrapper {
-  background-color: aliceblue;
+ background-color: #CDD5E0;
   max-width: 60%;
   max-height: 200%;
   margin: auto;
@@ -48,6 +48,7 @@ body {
   width: 100%;
   height: 50px;
   border-radius: 10px;
+  border-style: none;
 }
 
 .wrapper textarea {
@@ -55,6 +56,7 @@ body {
   width: 95%;
   border-radius: 10px;
   resize: none;
+  border-style: none;
 }
 
 .wrapper label {
@@ -83,7 +85,6 @@ textarea::placeholder {
   width: 45%;
   margin-left: 24px;
   margin-top: 24px;
-  
 }
 
 .wrapper .message-info {
