--- a/contact-page-master/styles.css
+++ b/contact-page-master/styles.css
@@ -35,7 +35,7 @@ body {
 }
 
 .wrapper {
- background-color: #CDD5E0;
+  background-color: rgba(17, 23, 41, 0.15);
   max-width: 60%;
   max-height: 200%;
   margin: auto;
@@ -63,6 +63,7 @@ body {
   display: block;
   font-weight: bold;
   font-size: 14px;
+  color:#fff;
 }
 
 .wrapper select {
@@ -75,6 +76,7 @@ input::placeholder,
 textarea::placeholder {
   font-weight: bold;
   font-size: 16px;
+  color: black;
 }
 
 
