--- a/contact-page-master/styles.css
+++ b/contact-page-master/styles.css
@@ -123,3 +123,13 @@ button {
 .author-info a {
   text-decoration: none;
 }
+
+@media screen and (max-width: 890px) {
+  .wrapper {
+    width: 150%;
+  }
+  .wrapper div {
+   width: 95%;
+  }
+
+}
